--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,18 @@
-<p>This is the homepage!</p>
+<main>
+    <section>
+        <img src="../../assets/icons/art.svg" draggable="false"/>
+        <h2>Famous art within your budget</h2>
+        <a routerLink="/replicas" class="btn">Replicas</a>
+    </section>
+    <section>
+        <div class="container">
+            <img src="../../assets/icons/logo-white.svg" draggable="false"/>
+            <p class="quote">
+                Good artists copy. <br />
+                Great artists steal. <br />
+                <span>Pablo Picasso</span>
+            </p>
+        </div>
+        <div class="background-overlay"></div>
+    </section>
+</main>
