--- a/src/app/replicas-overview/replica-block/replica-block.component.html
+++ b/src/app/replicas-overview/replica-block/replica-block.component.html
@@ -1,7 +1,7 @@
 <article>
     <img src="{{ replica.imageUrl }}" />
     <div>
-        <p class="list-group-item-text">{{ replica.artist }} <br /> {{ replica.origin }}</p>
+        <p class="list-group-item-text">{{ replica.artist }} <br /> {{ replica.origin }} ({{ replica.year }})</p>
         <div>
             <h3> {{ replica.cost }} EU </h3>
             <h4> {{ replica.name }} </h4>
