--- a/src/app/checkout/checkout-item/checkout-item.component.html
+++ b/src/app/checkout/checkout-item/checkout-item.component.html
@@ -4,7 +4,7 @@
     </div>
     <div class="order-info">
         <h2>{{ replicaItem.replica.name }}</h2>
-        <p>{{ replicaItem.replica.artist }} - {{ replicaItem.replica.origin }}</p>
+        <p>{{ replicaItem.replica.artist }} - {{ replicaItem.replica.origin }} ({{ replicaItem.replica.year }})</p>
         <div class="cost">
             <button (click)="decreaseAmount()">
                 <img src="../../../assets/icons/minus.svg" />
