--- a/src/app/replicas-overview/replica-block/replica-block.component.scss
+++ b/src/app/replicas-overview/replica-block/replica-block.component.scss
@@ -38,6 +38,7 @@ article {
             display: flex;
             flex-direction: column;
             align-items: center;
+            width: 100%;
 
             > h3 {
                 color: #262626;
