--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,6 +1,6 @@
 <app-navigation></app-navigation>
 <section>
-    <form #authForm="ngForm" (ngSubmit)="onSubmit(authForm)" *ngIf="!isLoading">
+    <form #authForm="ngForm" (ngSubmit)="onSubmit(authForm)" *ngIf="!isLoading" [ngClass]="{ error: hasErrors }">
         <div class="logo">
             <img src="../../assets/icons/logo-white.svg" />
         </div>
