--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -20,22 +20,29 @@ section {
         border-radius: 5px;
         margin-top: 5vh;
 
+        &.error > div {
+            > label {
+                color: darken(#ff8787, 30%);
+            }
+
+            > input {
+                outline: 0;
+                border-bottom: 3px solid #ff8787;
+            }
+        }
+
         div.logo {
             transition: 0.2s;
             display: flex;
             justify-content: center;
-            padding: 10px;
+            padding: 5%;
             border-radius: 3px;
-            background-color: rgba($primary-color, 0.8);
+            background-color: rgba(darken($secondary-tone, 25%), 0.8);
 
             > img {
                 width: 40%;
                 padding: 5px;
                 border-radius: 5px;
-            }
-
-            &:hover {
-                background-color: rgba($primary-color, 1);
             }
         }
 
@@ -44,6 +51,8 @@ section {
             width: 100%;
 
             > label {
+                transition: 0.2s;
+            
                 &::after {
                     content: "\A";
                     white-space: pre;
@@ -51,6 +60,7 @@ section {
             }
 
             > input {
+                transition: 0.2s;
                 margin-top: 5px;
                 border-radius: 3px;
                 width: 100%;
@@ -58,6 +68,7 @@ section {
                 background-color: rgba(0,0,0,0.08);
                 font-size: 12pt;
                 border: none;
+                border-bottom: 3px solid transparent;
 
                 &:focus + label {
                     background-color: pink;
