--- a/src/app/register/register.component.scss
+++ b/src/app/register/register.component.scss
@@ -41,7 +41,7 @@ section {
             justify-content: center;
             padding: 5%;
             border-radius: 3px;
-            background-color: rgba(darken($secondary-tone, 25%), 0.8);
+            background-color: rgba(darken($primary-tone, 10%), 0.8);
 
             > img {
                 width: 40%;
