--- a/src/app/manage-replica/manage-replica.component.scss
+++ b/src/app/manage-replica/manage-replica.component.scss
@@ -5,6 +5,39 @@ section {
     justify-content: center;
     align-items: center;
 
+    .replica-art {
+        transition: 0.2s;
+        max-width: 100%;
+        max-height: 250px;
+        background-color: $background-color;
+        padding: 3px;
+
+        &-border {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            transition: 0.2s;
+            border-radius: 5px;
+            padding: 5px;
+            background: linear-gradient(-90deg, rgba($primary-tone, 0.8) 0%, rgba($secondary-tone, 0.8) 100%);
+            box-shadow: 0 5px 10px -2px rgba(0, 0, 0, 0.1);
+            
+            &:hover {
+                transform: scale(1.25, 1.25);
+                box-shadow: 0 5px 10px -2px rgba(0, 0, 0, 0.25);
+            }
+
+            &.no-border {
+                background: none;
+                box-shadow: none;
+
+                .replica-art {
+                    width: 80%;
+                }
+            }
+        }
+    }
+
     > form {
         box-sizing: border-box;
         display: flex;
@@ -12,13 +45,13 @@ section {
         align-items: center;
         flex-direction: column;
         width: 100%;
-        max-width: $mobile-large;
+        max-width: $desktop;
         border-bottom: 1px solid rgba(0,0,0,0.1);
         box-shadow: 0 5px 10px -2px rgba(0, 0, 0, 0.1);
         padding: 30px;
         background-color: $background-color;
         border-radius: 5px;
-        margin: 5vh 30px;
+        margin: 5vh 20px;
 
         @media only screen and (max-width: $mobile-large) {
             margin: 5vh 2vw;
@@ -35,13 +68,12 @@ section {
             }
         }
 
-        div.logo {
+        div.image-view {
             transition: 0.2s;
             display: flex;
             justify-content: center;
-            padding: 5%;
             border-radius: 3px;
-            background-color: rgba(darken($secondary-tone, 25%), 0.8);
+            background-color: $background-color;
 
             > img {
                 width: 40%;
@@ -84,9 +116,4 @@ section {
             align-self: flex-end;
         }
     }
-}
-
-.button-holder {
-    display: flex;
-    justify-content: flex-end;
 }
