--- a/src/app/manage/manage.component.html
+++ b/src/app/manage/manage.component.html
@@ -4,4 +4,5 @@
         No items added to shopping basket...
     </article>
     <app-checkout-item *ngFor="let replicaItem of replicaList" [replicaItem]="{ replica: replicaItem, amount: -1 }" [adminView]="true"></app-checkout-item>
+    <a class="btn small" [routerLink]="['/manage/replica/new']">New replica</a>
 </section>
