Proper fixes for frontend and backend, including dist folder

--- a/frontend/src/app/replicas-overview/replica-block/replica-block.component.html
+++ b/frontend/src/app/replicas-overview/replica-block/replica-block.component.html
@@ -1,6 +1,6 @@
 <article>
     <img src="{{ replica.imageUrl }}" />
-    <div>
+    <div onclick="">
         <p class="list-group-item-text">{{ replica.artist }} <br /> {{ replica.origin }} ({{ replica.year }})</p>
         <div>
             <h3> {{ replica.cost }} EU </h3>
