--- a/frontend/src/app/register/register.component.html
+++ b/frontend/src/app/register/register.component.html
@@ -1,5 +1,6 @@
 <app-navigation></app-navigation>
 <section>
+    <app-pop-up [message]="errorMessage"></app-pop-up>
     <form #authForm="ngForm" (ngSubmit)="onSubmit(authForm)" *ngIf="!isLoading" [ngClass]="{ error: hasErrors }">
         <div class="logo">
             <img src="../../assets/icons/logo-white.svg" />
