--- a/frontend/src/app/shared/navigation/navigation.component.scss
+++ b/frontend/src/app/shared/navigation/navigation.component.scss
@@ -263,12 +263,12 @@ nav {
         color: $background-color;
         position: absolute;
         height: 64px;
+        max-width: 50%;
         padding: 0 4vw;
         background-color: $primary-color;
-        top: 0;
+        bottom: 0;
         right: 0;
         z-index: 1;
-        max-width: 50%;
 
         &::after {
             background-image: url('../../../assets/icons/profile-white.svg') !important;
