--- a/frontend/src/app/replicas-overview/replicas-overview.component.scss
+++ b/frontend/src/app/replicas-overview/replicas-overview.component.scss
@@ -29,3 +29,53 @@ section {
         padding: 0 30px;
     }
 }
+
+.search {
+    position: fixed;
+    bottom: 0;
+    right: 0;
+    margin: 2vw;
+    display: flex;
+    border-radius: 100vh;
+    box-shadow: 0 5px 10px -2px rgba(0, 0, 0, 0.25);
+    background-color: darken($background-color, 5%);
+    border: 1px solid rgba(0,0,0,0.1);
+
+    > input {
+        outline: none;
+        width: 100%;
+        transition: 0.2s;
+        border: none;
+        border-radius: 100vh;
+        background-color: transparent;
+        padding: 10px 0 10px 20px;
+        font-size: 12pt;
+        line-height: 12pt;
+
+        &.closed {
+            width: 0%;
+        }
+    }
+
+    > button {
+        min-width: 45px;
+        min-height: 45px;
+        max-width: 45px;
+        max-height: 45px;
+        border: none;
+        border-radius: 100vh;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        opacity: 0.5;
+
+        > img {
+            width: 35%;
+            height: 35%;
+        }
+    }
+
+    @media only screen and (min-width: $desktop-large) {
+        margin: 30px;
+    }
+}
